// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GifGrid /> Debe mostrar el componente <GifGrid /> correctamente 1`] = `
<Fragment>
  <h2>
    Goku
  </h2>
  <p
    className="animate__animated animate__fadeIn"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas al componente <GifGrid /> Debe mostrar items cuando se cargan imágenes con el custom hook useFetchGifs 1`] = `
<Fragment>
  <h2>
    Goku
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
